# Advent_of_Code_2022

./: CMakeLists.txt  LICENSE  README.md
template/: CMakeLists.txt  README.md
template/inc/: test_utils.hpp
template/src/: main.cpp
